[nobug] Remove MaxPermSize vmarg from pom files
Change-Id: I99cb004c1d9686b8a8d0839e8ebfbaa0f84e3a62